# py-st-ml-students-perf-pred

./: CHANGELOG.md  README.md  README.zh-CN.md  main.py  predictor.py  pyproject.toml
models/: .gitignore  model.pth
src/: __init__.py
src/criteria/: __init__.py  mse_log.py  sem_dice.py  sem_dnf.py  sem_edge.py  sem_focal.py
src/dataloader/: __init__.py  general.py
src/datasets/: __init__.py  label_classes.py  label_regression.py  mask_map.py  reshaper.py  sem_segmentation.py  seq_classes.py  seq_prediction.py
src/nets/: __init__.py  regression.py  sem_standard4.py  sem_standard5.py  seq_classes.py
src/trainers/: __init__.py  regression.py  sem_classes.py  seq_classes.py
src/utils/: PT.py  __init__.py  config.py  decorator.py  helper.py  highlighter.py  stats.py
