[project]
name = "py-st-ml-students-perf-pred"
version = "0.1.0"
description = "Student Academic Performance Prediction using Pytorch & Streamlit."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.2.250926",
    "pillow>=12.0.0",
    "pyside6>=6.10.1",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "torchsummary>=1.5.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "git-changelog>=2.7.0",
]

[tool.git-changelog]
bump = "auto"
convention = "conventional"
in-place = false
filter-commits = ""
marker-line = "<!-- insertion marker for GitHub -->"
output = "CHANGELOG.md"
parse-refs = true
parse-trailers = true
provider = "github"
repository = "."
sections = ["feat", "fix", "chore", "docs", "perf", "build", "refactor", "test", "deps"]
template = "angular"
version-regex = "^## \\[(?P<version>v?[^\\]]+)"
versioning = "semver"
zerover = false
